<resources>
    <string name="app_name">OrderIce-cream</string>
    <string name="sologan">App order ice cream by Hungpld</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="loading_login">"Please Wating..."</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="phone_Number">Phone number</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="user_location">Hà Nội</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <string name="chat">Chat</string>
    <string name="user">User</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="event_noti">Thông báo</string>
    <string name="details_ice_cream">Chi tiết sản phẩm</string>
    <string name="shopping">Mua hàng</string>
    <string name="list_store">Danh sách cửa hàng</string>
    <string name="info_user">Thông tin người dùng</string>
    <string name="chat_list">Danh sách trò chuyện</string>
    <string name="default_city">Không xác định được tên thành phố</string>
    <string name="info_cart">Thông tin giỏ hàng</string>
    <string name="total_price">Tổng Hóa Đơn</string>
    <string name="payment">Thanh toán</string>
    <string name="total_payment">Tổng hóa đơn :</string>
    <string name="ship">Phí vận chuyển :</string>
    <string name="total_pay">Tổng chi phí :</string>
    <string name="accept">Xác nhận</string>
    <string name="type_payment">Hình thức thanh toán :</string>
    <string name="Close_map">Close map</string>
    <string name="your_location">Your Location</string>

    <!--map api key-->
    <string name="map_api_key">AIzaSyAeiV0M8udpKTdYBNgOuTbanL2IUsdtI8o</string>
    <string name="all_ratting">Tất cả đánh giá</string>
    <string name="setup_profile">Thiết lập tài khoản</string>
    <string name="history_order">Lịch sử mua hàng</string>
    <string name="my_wallet">Số dư tài khoản</string>
    <string name="log_out">Đăng xuất</string>
    <string name="remid_user"> Kiểm tra lại số điện thoại hoặc mật khẩu </string>
    <string name="order_history">Lịch sử mua hàng</string>
    <string name="time_order">Thời gian mua hàng</string>
    <string name="fee_order">Phí đơn hàng</string>
    <string name="fee_ship">Phí vận chuyển</string>
    <string name="payment_order">Hình thức thanh toán</string>
    <string name="profile_order_details">Chi tiết sản phẩm</string>
    <string name="ratting_product">Đánh giá sản phẩm này</string>
    <string name="text_hint_comment">Comment here !!!</string>
    <string name="submit">Submit</string>
    <string name="goto_payment">Tiến hành đặt hàng</string>
    <string name="request_location">Quyền truy cập vị trí</string>
    <string name="request_location_content">Vui lòng cho phép app truy cập vị trí của bạn.</string>
    <string name="allow_to_access">Cho phép truy cập</string>
    <string name="request_location_explain_forever_desc">Để tiếp tục, bạn cần cho phép app truy cập vị trí của bạn. Vào Cài đặt > Quyền và cho phép truy cập vị trí</string>
    <string name="scan_qr_code_permission_forever_action">Mở cài đặt</string>
    <string name="request_location_explain">Vui lòng cho phép app truy cập vị trí của bạn.</string>
    <string name="details_order">Chi tiết đơn hàng</string>
    <string name="My_wallet">Ví của tôi</string>
    <string name="charge_point">Nạp tiền</string>
    <string name="input_number">Cho xin con số</string>
    <string name="sub_mit">Submit</string>
    <string name="click_here">CLICK HERE !!!</string>
    <string name="register_success">Đăng kí thành công</string>
    <string name="register_failed">Đăng kí thất bại</string>
</resources>
