<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_50"
            android:paddingEnd="@dimen/dp_30">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/phone_Number"
                    android:inputType="phone"
                    android:textColor="#2fa881"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:paddingBottom="@dimen/dp_10"
                    android:maxLength="15"
                    android:textSize="@dimen/sp_13" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_50"
            android:paddingEnd="@dimen/dp_30">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c5c5c5">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/dp_10"
                    android:textColor="#2fa881"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="@dimen/sp_13" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_25"
            android:gravity="center">

            <Button
                android:id="@+id/btnLoginGo"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/custom_button_enable"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/go"
                android:textColor="#d3d3d3" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/forgot_your_password"
            android:textColor="#9a9a9a"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
</LinearLayout>