<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imgBack_To_Cart"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/back_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:lines="1"
            android:text="@string/payment"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/holo_blue_light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"

                android:weightSum="10">

                <ImageView
                    android:id="@+id/imgLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/txt_Location"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:text="@string/click_location"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="@string/total_payment"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/txt_charge_order"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:lines="1"
                    android:text="1000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:text="@string/ship"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/txt_charge_ship"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="@string/total_pay"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/txt_total_charge"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:lines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="6"
                    android:gravity="center_vertical"
                    android:text="@string/type_payment"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:id="@+id/spnPayments"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:lines="1" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/custum_button"
                android:text="@string/accept"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
