<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="1"
            android:text="@string/My_wallet"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@android:color/holo_blue_light" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:elevation="@dimen/dp_1"
        android:innerRadius="@dimen/dp_0"
        android:padding="@dimen/dp_5"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="@dimen/dp_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:src="@drawable/ic_wallet_2" />

            <TextView
                android:textColor="@android:color/holo_red_dark"
                android:id="@+id/txtWalletMoney"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_weight="6"
                android:gravity="start"
                android:textSize="@dimen/sp_30"
                android:typeface="serif" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_margin="@dimen/dp_10"
        android:id="@+id/btnShowInputMoney"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20"
            android:layout_weight="4"
            android:lines="1"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center_vertical"
            android:typeface="serif"
            android:text="@string/charge_point" />

        <ImageView
            android:paddingBottom="@dimen/dp_5"
            android:paddingTop="@dimen/dp_10"
            android:src="@drawable/ic_money"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/viewWalletSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtInputMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:hint="@string/input_number"
            android:inputType="number"
            android:maxLength="5" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/custom_button_enable"
            android:text="@string/sub_mit"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>